[package]
name = "astroforge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = "0.26.2", optional = true }
serde = { version = "1.0.126", features = ["derive"], optional = true }
csv = { version = "1.1.6", optional = true }
ndarray = { version = "0.15.3", optional = true }

[features]
default = ["celestial", "nalgebra", "egm", "interp", "doe"]
interp = ["ndarray"]
egm = ["csv", "serde", "ndarray"]
ode = []
celestial = []
